use BOM; remove unnecessary --add-opens